fixed the overflow of the webpage to hidden

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     font-size: 20px;
     background-color: antiquewhite;
     font-family: "Red Hat Display", sans-serif;
+    overflow-x: hidden;
 }
 
 /*Header*/
